<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">音乐遥控器</string>
    <string name="header_subtitle">PC 多媒体与播放器局域网遥控端</string>
    <string name="hint_ip">电脑 IP 与端口 (如 192.168.1.5:10010)</string>
    <string name="btn_connect">连接</string>
    <string name="status_connected">● 已连接</string>
    <string name="status_disconnected">○ 未连接</string>
    <string name="btn_prev">⏮ 上一首</string>
    <string name="btn_next">⏭ 下一首</string>
    <string name="btn_play_pause">⏯ 播放 / 暂停</string>
    <string name="btn_vol_down">🔉 音量 -</string>
    <string name="btn_vol_up">🔊 音量 +</string>
    <string name="btn_sleep">🌙 一键睡眠</string>
    <string name="btn_shutdown">⛔ 安全关机</string>
    <string name="card_title">连接状态与快捷键</string>
    <string name="dialog_sleep_title">一键睡眠确认</string>
    <string name="dialog_sleep_msg">确认让电脑进入睡眠模式吗？</string>
    <string name="dialog_shutdown_title">安全关机确认</string>
    <string name="dialog_shutdown_msg">确认要关闭电脑吗？电脑将在 5 秒后切断电源。</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
</resources>
